[gd_scene load_steps=6 format=3 uid="uid://dgi7j5qx3xt84"]

[ext_resource type="Script" path="res://scenes/StatsView/StatsView.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/roboto-32b.tres" id="2"]
[ext_resource type="FontFile" path="res://fonts/roboto-16b.tres" id="3"]
[ext_resource type="PackedScene" path="res://scenes/UI/PrimaryButton.tscn" id="5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m0bq4"]

[node name="StatsView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2")
text = "Stats"

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatName" type="LineEdit" parent="VB"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Enter stat name"

[node name="IngestAmount" type="SpinBox" parent="VB"]
layout_mode = 2
size_flags_horizontal = 0
max_value = 900000.0
rounded = true

[node name="HB" type="HBoxContainer" parent="VB"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="IngestBtn" parent="VB/HB" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 0
text = "Ingest"

[node name="StatusLabel" type="Label" parent="VB/HB"]
layout_mode = 2

[node name="RefreshMyStatsBtn" parent="VB" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 0
text = "Refresh my stats"

[node name="HSeparator" type="HSeparator" parent="VB"]
layout_mode = 2

[node name="MyStatsLabel" type="Label" parent="VB"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "My Stats"

[node name="VB" type="VBoxContainer" parent="VB"]
layout_mode = 2

[node name="MyStatsRichTextLabel" type="RichTextLabel" parent="VB/VB"]
layout_mode = 2
focus_mode = 2
theme_override_constants/table_h_separation = 16
theme_override_constants/table_v_separation = 4
theme_override_fonts/bold_font = ExtResource("3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m0bq4")
bbcode_enabled = true
text = "Stat NameValueStart TimeEnd Time"
fit_content = true
context_menu_enabled = true
selection_enabled = true
